force-app/main/default/objects/SVMXA360__CONF_Layout__c/SVMXA360__CONF_Layout__c.object-meta.xml
<CustomObject>
    <description>To store layout information like name, description, and properties.</description>
    <label>Layout</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>