force-app/main/default/objects/SVMXA360__CONF_Layout__c/fields/SVMXA360__DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DeveloperName__c</fullName>
    <description>Unique ID generated for layout.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Developer Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>