force-app/main/default/objects/SVMXA360__CONF_Layout__c/fields/SVMXA360__FieldMapping__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FieldMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to field mapping which will be applied during run time.</description>
    <label>Field Mapping</label>
    <referenceTo>SVMXA360__CONF_ObjectMapping__c</referenceTo>
    <relationshipLabel>Layouts</relationshipLabel>
    <relationshipName>Layouts</relationshipName>
    <type>Lookup</type>
</CustomField>