force-app/main/default/objects/SVMXA360__CONF_Layout__c/fields/SVMXA360__FieldSets__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FieldSets__c</fullName>
    <description>Field Set Info for header object stored in JSON format</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Sets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>