force-app/main/default/objects/SVMXA360__CONF_Layout__c/fields/SVMXA360__HideName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__HideName__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, title of the Screen/transaction is hidden</description>
    <label>Hide Name</label>
    <type>Checkbox</type>
</CustomField>