force-app/main/default/objects/SVMXA360__CONF_Layout__c/fields/SVMXA360__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectAPIName__c</fullName>
    <description>Target object API Name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>