force-app/main/default/objects/SVMXA360__CONF_Layout__c/fields/SVMXA360__QualifyingCriteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__QualifyingCriteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to an expression that will be applied during run time.</description>
    <label>Qualifying Criteria</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Layouts</relationshipLabel>
    <relationshipName>Layouts</relationshipName>
    <type>Lookup</type>
</CustomField>