force-app/main/default/objects/SVMXA360__CONF_Layout__c/fields/SVMXA360__ScreenType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ScreenType__c</fullName>
    <label>Screen Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Screen</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>