force-app/main/default/objects/SVMXA360__CONF_Layout__c/fields/SVMXA360__TransactionType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TransactionType__c</fullName>
    <description>Determines if the transaction is creating or editing records.</description>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standalone Edit</fullName>
            </value>
            <value>
                <fullName>Source to Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>