force-app/main/default/objects/SVMXA360__CONF_Layout__c/fields/SVMXA360__ValueMapping__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ValueMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to value mapping, which will be applied during run time.</description>
    <label>Value Mapping</label>
    <referenceTo>SVMXA360__CONF_ObjectMapping__c</referenceTo>
    <relationshipLabel>Layouts (Value Mapping)</relationshipLabel>
    <relationshipName>Layouts1</relationshipName>
    <type>Lookup</type>
</CustomField>